@@ -1,10 +1,11 @@
 frostwire (6.9.4) stable; urgency=high
+ * Torrent search results when double clicked or downloaded in bulk by default show partial download dialog
  * Torrentz2 search fixed
  * SoundCloud search fixed
  * Files in the transfer detail panel can be dragged out of FrostWire into OS file explorer for copying
  * Telluride build 16
 
- -- FrostWire Team <contact@frostwire.com>  Mon, 07 Jun 2021 23:03:00 -0600
+ -- FrostWire Team <contact@frostwire.com>  Thu, 10 Jun 2021 16:37:00 -0600
 
 frostwire (6.9.3) stable; urgency=high
  * Telluride Cloud Video Downloader build 15
